# VehicleComputingSimulator

./: .clang-format  .gitignore  CMakeLists.txt  Dockerfile  Packet.cpp  Packet.h  camera_sensor.json  communication.cpp  communication.h  packet_structure.json  tire_pressure_sensor.json
Tests/: test_build.cpp
communication/: .gitignore
communication/include/: bus_manager.h  client.h  client_connection.h  communication.h  error_code.h  message.h  packet.h  server.h  server_connection.h
communication/sockets/: Isocket.h  mock_socket.h  real_socket.cpp  real_socket.h
communication/src/: bus_manager.cpp  client.cpp  client_connection.cpp  communication.cpp  message.cpp  packet.cpp  server.cpp  server_connection.cpp
communication/tests/: client_test.cpp  server_test.cpp
control/: .gitignore  CMakeLists.txt  my_bson.bson
control-build_conditons/: .gitignore  CMakeLists.txt  README.md  sensors.json
control-build_conditons/include/: actions.h  condition.h  input.h  output.h
control-build_conditons/src/: actions.cpp  condition.cpp  input.cpp  main.cpp  main_window.cpp  output.cpp
control-build_conditons/src/sensors_data/: communication.json  speed.json
control-build_conditons/test/: build_tests.cpp  sensors.json
control-build_conditons/test/sensors_data/: camera.json  speed.json
control/include/: actions.h  basic_condition.h  condition.h  full_condition.h  global_properties.h  input.h  main_window.h  operator_node.h  operator_types.h  output.h  root.h  sensor.h
control/src/: actions.cpp  basic_condition.cpp  condition.cpp  condition_factory.cpp  full_condition.cpp  global_properties.cpp  input.cpp  main.cpp  main_window.cpp  operator_node.cpp  operator_types.cpp  output.cpp  root.cpp  sensor.cpp  test_helper.cpp
control/src/sensors_data/: tirePressure.json
control/test/: build_tests.cpp  test_complex_build.cpp  test_helper.cpp  test_helper.h  test_simple_build.cpp
control/test/sensors_data/: speed.json
gui/: .gitignore  CMakeLists.txt
gui/include/: compiler.h  draggable_square.h  frames.h  log_handler.h  main_window.h  process.h  process_dialog.h  simulation_data_manager.h  simulation_state_manager.h
gui/src/: compiler.cpp  draggable_square.cpp  frames.cpp  log_handler.cpp  main.cpp  main_window.cpp  process.cpp  process_dialog.cpp  simulation_data_manager.cpp  simulation_state_manager.cpp
gui/src/dummy_program1/: config.json  main.cpp
gui/src/dummy_program2/: CMakeLists.txt  config.json  main.cpp
gui/test/: CMakeLists.txt  test_draggable_square.cpp  test_log_handler.cpp  test_main_window.cpp  test_process.cpp  test_process_dialog.cpp  user_interaction_tests.cpp
gui/test/dummy_program2/: main.cpp
hsm/: CMakeLists.txt  Dockerfile
hsm/include/: big_int_utils.h  ecc.h  prime_tests.h  rsa.h
hsm/include/threads-version/: big_int64.h
hsm/src/: SHA3-512.cpp  aes_ecb.cpp  aes_stream_factory.cpp  big_int10.cpp  hash_factory.cpp  rsa.cpp  sha256.cpp
hsm/src/threads-version/: big_int64.cpp
hsm/tests/: hash_tests.cpp  sha256_tests.cpp
img_processing/: .gitignore  CMakeLists.txt  README.md  data.txt
img_processing/include/: alert.h  alerter.h  detection_object_struct.h  detector.h  distance.h  dynamic_tracker.h  jsonUtils.h  log_manager.h  manager.h  object_information_struct.h  object_type_enum.h  tracker_object_struct.h  velocity.h
img_processing/src/: alert.cpp  alerter.cpp  detector.cpp  distance.cpp  dynamic_tracker.cpp  jsonUtils.cpp  log_manager.cpp  main.cpp  manager.cpp  velocity.cpp
img_processing/tests/: test_detector.cpp  test_distance.cpp  test_dynamic_tracker.cpp  test_manager.cpp  test_serialize.cpp  test_velocity.cpp  utils.cpp  utils.h
include/: IHash.h  SHA3-512.h  actions.h  aes.h  aes_stream.h  aes_stream_factory.h  big_int10.h  condition.h  condition_factory.h  ecc.h  full_condition.h  global_properties.h  hash_factory.h  main_window.h  node.h  operator_node.h  output.h  prime_tests.h  return_codes.h  sha256.h  test_helper.h
include/sycl-version/: big_int64.h
logger/: logger.cpp  logger.h
main_bus/: .gitignore  CMakeLists.txt  main_bus.cpp
parser_json/: .gitignore  CMakeLists.txt  README.md  json_example.json  packet_structure.json  packet_structure_v2.json
parser_json/src/: main.cpp  packet_parser.cpp  packet_parser.h
parser_json/test/: test_packet_parser.cpp
sockets/: ISocket.h  mockSocket.h  realSocket.h
src/: Packet.cpp  Packet.h  SHA3-512.cpp  actions.cpp  aes.cpp  aes_cbc.cpp  aes_cfb.cpp  aes_ctr.cpp  aes_ecb.cpp  aes_ofb.cpp  alert.cpp  alert.h  alerter.cpp  alerter.h  and_operator.cpp  and_operator.h  basic_condition.cpp  basic_condition.h  big_int10.cpp  communication.cpp  communication.h  condition.cpp  condition.h  condition_factory.cpp  detection_object_struct.h  detector.cpp  detector.h  draggable_square.cpp  draggable_square.h  dynamic_tracker.cpp  dynamic_tracker.h  ecc.cpp  enums.h  frames.cpp  frames.h  full_condition.cpp  full_condition.h  global_properties.cpp  global_properties.h  input.cpp  (+38 more)
src/dummy_program1/: main.cpp
src/dummy_program2/: main.cpp
src/dummy_script/: hello_script.sh
src/sensors_data/: communication_sensor.json  speed_sensor.json
src/sycl-version/: big_int64.cpp
test/: example_test.cpp  testCommunication.cpp  test_build.cpp  test_conditions.cpp  test_draggable_square.cpp  test_process_dialog.cpp  user_interaction_tests.cpp
tests/: SHA3-512_tests.cpp  aes_tests.cpp  client_test.cpp  ecc_tests.cpp  rsa_tests.cpp  server_test.cpp  sha256_tests.cpp  test.cpp  test_detector.cpp  test_dynamic_tracker.cpp  test_serialize.cpp
